hphp/test/slow/inout/bad-call-15.php.expectf
Fatal error: Invalid use of `$this`: it cannot be set via `inout` in %s/test/slow/inout/bad-call-15.php on line 7